--- a/README.Rmd
+++ b/README.Rmd
@@ -81,7 +81,7 @@ For example following rules allow only authenticated users to can read data and 
 
 ## cRew App 
 
-[cRew Tracker](http://tools.dataatomic.com/shiny/cRew) 
+[cRew symptom Tracker](http://tools.dataatomic.com/shiny/cRew) 
 
 The app is for experimental purposes and the disease risk estimation via the app are calculated by the users who enter values thus can be biased.
 
@@ -94,7 +94,7 @@ remotes::install_github("korur/cRew")
 
 ## Set up and run
 
-The code for the app is available as an R package cRew. You can deploy and connect to your own database and run it with your modifications.
+The code for the app is available as an R package cRew. You can deploy and connect to your own database and run it with your modifications and track other symptoms/diseases.
 
 ``` r
 # Setting up with your firebase database
